// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinderList should match snapshot 1`] = `
<div class="list">
  <div class="drop-zone">
    <!--v-if-->
  </div>
  <div class="item draggable" role="button" draggable="true" tabindex="0">
    <!--v-if-->
    <!--v-if-->
    <div class="inner-item" item="[object Object]">Test 11</div>
    <div class="arrow"></div>
  </div>
  <!--teleport start-->
  <!--teleport end-->
  <div class="drop-zone">
    <!--v-if-->
  </div>
  <div class="item draggable" role="button" draggable="true" tabindex="-1">
    <!--v-if-->
    <!--v-if-->
    <div class="inner-item" item="[object Object]">Test 12</div>
    <!--v-if-->
  </div>
  <!--teleport start-->
  <!--teleport end-->
  <div class="drop-zone last">
    <!--v-if-->
  </div>
</div>
`;

exports[`FinderList should match snapshot if \`dragEnabled\` is true 1`] = `
<div class="list">
  <div class="drop-zone">
    <!--v-if-->
  </div>
  <div class="item draggable" role="button" draggable="true" tabindex="0">
    <!--v-if-->
    <!--v-if-->
    <div class="inner-item" item="[object Object]">Test 11</div>
    <div class="arrow"></div>
  </div>
  <!--teleport start-->
  <!--teleport end-->
  <div class="drop-zone">
    <!--v-if-->
  </div>
  <div class="item draggable" role="button" draggable="true" tabindex="-1">
    <!--v-if-->
    <!--v-if-->
    <div class="inner-item" item="[object Object]">Test 12</div>
    <!--v-if-->
  </div>
  <!--teleport start-->
  <!--teleport end-->
  <div class="drop-zone last">
    <!--v-if-->
  </div>
</div>
`;

exports[`FinderList should match snapshot if \`selectable\` is true 1`] = `
<div class="list">
  <div class="drop-zone">
    <!--v-if-->
  </div>
  <div class="item draggable" role="button" draggable="true" tabindex="0">
    <!--v-if--><input type="checkbox" aria-label="Test 11">
    <div class="inner-item" item="[object Object]">Test 11</div>
    <div class="arrow"></div>
  </div>
  <!--teleport start-->
  <!--teleport end-->
  <div class="drop-zone">
    <!--v-if-->
  </div>
  <div class="item draggable" role="button" draggable="true" tabindex="-1">
    <!--v-if--><input type="checkbox" aria-label="Test 12">
    <div class="inner-item" item="[object Object]">Test 12</div>
    <!--v-if-->
  </div>
  <!--teleport start-->
  <!--teleport end-->
  <div class="drop-zone last">
    <!--v-if-->
  </div>
</div>
`;

exports[`FinderList should match snapshot if no item 1`] = `
<div class="list">
  <div class="drop-zone last">
    <!--v-if-->
  </div>
</div>
`;
